--- a/HelpDesk v1/.classpath
+++ b/HelpDesk v1/.classpath
@@ -18,5 +18,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xmlbeans-2.3.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itext-pdfa-5.4.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itext-xtra-5.4.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itextpdf-5.4.5.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
