--- a/HelpDesk v1/.classpath
+++ b/HelpDesk v1/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itext-pdfa-5.4.5.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itext-xtra-5.4.5.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/itextpdf-5.4.5.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/joda-time-2.3.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
